# aquapredictfr

./: .env  .gitignore  QUICKSTART_SERIAL.md  README.md  alerts.json  analyze_all.py  app.py  capteurs_challenges.py  clean_data.py  courbe_d'apprentissage  data_final.py  dataset_final.csv  evaluer_modele.py  index.html  main.py  matrice_confusion.py  package-lock.json  package.json  pyproject.toml  quick_train.py  requirements.txt  server.js  svm_diagnostic.py  tailwind.config.ts  test_svm.py  train_model.py  visualiser_correlation.py
.github/workflows/: ci.yml
data_logs/: measurements.csv
models/: inference.py  leak_detection_model.pkl  network_vision.py  recorder.py  scaler.pkl
scripts/: .env.example  serial-logger.js
src/: App.tsx  index.css
src/components/: AlertPanel.tsx  DigitalTwinViewer.tsx  GaugeCard.tsx  HistoryChart.tsx  LossSearchPlan.tsx  NetworkMap.tsx  PipingForm.tsx  StatusIndicator.tsx  UploadZone.tsx
src/hooks/: useHydraulicData.ts
src/integrations/supabase/: types.ts
src/pages/: Dashboard.tsx  Index.tsx  Login.tsx
supabase/: config.toml
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/functions/hydraulic-data-receiver/: index.ts
test-unitaire/: test-unitaire.ino
test_all_data_flow/: test_all_data_flow.ino
