[project]
name = "aquapredict-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "imbalanced-learn>=0.14.2",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.49.0",
]
